--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,8 +1,8 @@
 # Build stage
-FROM golang:1.21-alpine AS builder
+FROM golang:1.24-alpine AS builder
 
 # Install build dependencies
-RUN apk add --no-cache git
+RUN apk add --no-cache git curl
 
 # Set working directory
 WORKDIR /app
@@ -17,13 +17,13 @@ RUN go mod download
 COPY . .
 
 # Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -o /app/build/apollo-api ./cmd/api
+RUN CGO_ENABLED=0 GOOS=linux go build -o /app/build/apollo-api ./cmd/api/server
 
 # Final stage
 FROM alpine:latest
 
 # Install runtime dependencies
-RUN apk add --no-cache ca-certificates tzdata
+RUN apk add --no-cache ca-certificates tzdata curl
 
 # Create non-root user
 RUN adduser -D -g '' appuser
@@ -33,9 +33,6 @@ WORKDIR /app
 
 # Copy binary from builder
 COPY --from=builder /app/build/apollo-api .
-
-# Copy config files
-COPY configs/config.example.yaml /app/config.yaml
 
 # Use non-root user
 USER appuser
@@ -47,4 +44,4 @@ EXPOSE 8080
 ENV HOME=/app
 
 # Command to run the application
-ENTRYPOINT ["./apollo-api"] 
+ENTRYPOINT ["./apollo-api", "--config", "/app/config.yaml"] 
