--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,8 +1,8 @@
 # Build stage
-FROM golang:1.21-alpine AS builder
+FROM golang:1.24-alpine AS builder
 
 # Install build dependencies
-RUN apk add --no-cache git
+RUN apk add --no-cache git curl
 
 # Set working directory
 WORKDIR /app
@@ -33,9 +33,6 @@ WORKDIR /app
 
 # Copy binary from builder
 COPY --from=builder /app/build/apollo-cli .
-
-# Copy config files
-COPY configs/config.example.yaml /app/config.yaml
 
 # Use non-root user
 USER appuser
