--- a/Dockerfile.operator
+++ b/Dockerfile.operator
@@ -1,8 +1,8 @@
 # Build stage
-FROM golang:1.21-alpine AS builder
+FROM golang:1.24-alpine AS builder
 
 # Install build dependencies
-RUN apk add --no-cache git
+RUN apk add --no-cache git curl
 
 # Set working directory
 WORKDIR /app
